{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 4,
  "lineage": "2d11fd28-7e2b-bf46-3e20-92a009b2ed55",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/MyPackerGroup/providers/Microsoft.Network/virtualNetworks/MyPackerGroup-vnet/subnets/default",
            "name": "default",
            "network_security_group_id": "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/Atradius-Prem-POCDEV/providers/Microsoft.Network/networkSecurityGroups/Divvycloud",
            "resource_group_name": "MyPackerGroup",
            "virtual_network_name": "MyPackerGroup-vnet"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "id": "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/MyPackerGroup/providers/Microsoft.Network/virtualNetworks/MyPackerGroup-vnet",
            "location": "westeurope",
            "name": "MyPackerGroup-vnet",
            "resource_group_name": "MyPackerGroup",
            "subnets": [
              "default"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/ifrs-dev-sas-rg/providers/Microsoft.Network/networkInterfaces/sas-nic-fix",
            "ip_configuration": [
              {
                "name": "sas-dev-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/MyPackerGroup/providers/Microsoft.Network/virtualNetworks/MyPackerGroup-vnet/subnets/default"
              }
            ],
            "location": "westeurope",
            "name": "sas-nic-fix",
            "private_ip_address": "10.0.0.10",
            "private_ip_addresses": [
              "10.0.0.10"
            ],
            "resource_group_name": "ifrs-dev-sas-rg",
            "tags": {
              "Application": "sas",
              "Company": "Atradius",
              "Cost_center": "ifrs",
              "Dept": "ITS",
              "Environment": "dev",
              "Owner": "Prem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/ifrs-dev-sas-rg/providers/Microsoft.Network/networkSecurityGroups/sas-dev-nsg",
            "location": "westeurope",
            "name": "sas-dev-nsg",
            "resource_group_name": "ifrs-dev-sas-rg",
            "security_rule": [],
            "tags": {
              "Application": "sas",
              "Company": "Atradius",
              "Cost_center": "ifrs",
              "Dept": "ITS",
              "Environment": "dev",
              "Owner": "Prem"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow Ssh to sas env",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/ifrs-dev-sas-rg/providers/Microsoft.Network/applicationSecurityGroups/sas-dev-asg"
            ],
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/ifrs-dev-sas-rg/providers/Microsoft.Network/networkSecurityGroups/sas-dev-nsg/securityRules/remote_ssh",
            "name": "remote_ssh",
            "network_security_group_name": "sas-dev-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "ifrs-dev-sas-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_application_security_group.asg",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow access to metadata server",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/ifrs-dev-sas-rg/providers/Microsoft.Network/applicationSecurityGroups/sas-dev-asg"
            ],
            "destination_port_range": "8561",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ae87aa91-94eb-4229-900a-9ec56a601b4f/resourceGroups/ifrs-dev-sas-rg/providers/Microsoft.Network/networkSecurityGroups/sas-dev-nsg/securityRules/remote_metadata",
            "name": "remote_metadata",
            "network_security_group_name": "sas-dev-nsg",
            "priority": 1100,
            "protocol": "Tcp",
            "resource_group_name": "ifrs-dev-sas-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_application_security_group.asg",
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}